--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ATM Status KMM</title>
+    <title>KMM ATM Status</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300&family=Playfair+Display:wght@900&family=Roboto:ital,wght@0,100;0,400;1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -13,7 +13,7 @@
 <body>
     <div class = "container flex">
         <header>
-            <h1>ATM STATUS KMM</h1>
+            <h1>KMM ATM Status</h1>
             <h2>By Jun</h2>
         </header>
         <section class="flex-item">
