--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
     </div>
     <script>
         document.getElementsByClassName("indexButton")[0].addEventListener("click", feedback);
+
         function feedback() {
-            var a = document.querySelector('footer').style;
-            console.log(a.display);
-            if (a.display === 'none'){
-                a.display = 'block';
-                console.log("hi");
+        //Show/Hide feedback form    
+            var foot = document.querySelector('footer').style;
+            
+            if (foot.display === 'none'){
+                foot.display = 'block';
             }
             else{
-                a.display = 'none';
-                console.log("bye", a);
+                foot.display = 'none';
             }
         }
 
