--- a/index.html
+++ b/index.html
@@ -18,17 +18,14 @@
         </header>
         <section class="flex-item">
             <div>
-                <p>Status: </p>
-                <p id = "status"></p>
+                <p>Status: <span id="status"></span></p>
             </div>
             <img src="\atm_machine.jpg" alt="picture of atm machine">
             <div>
-                <p>Reason: </p>
-                <p class = "msg" id="reason">reason</p>
+                <p>Reason: <span id="reason" class='msg'></span></p>
             </div>
             <div>    
-                <p>Last update: </p>
-                <p class = "msg" id="update">Date time</p>
+                <p>Last update: <span id="dateTime" class='msg'></span></p>
             </div>
         </section>
 
@@ -56,6 +53,9 @@
     </div>
     <script>
         document.getElementsByClassName("indexButton")[0].addEventListener("click", feedback);
+        var status = 'hi';
+        var reason = 'bye';
+        var dateTime = 'test';
 
         function feedback() {
         //Show/Hide feedback form    
@@ -69,6 +69,13 @@
             }
         }
 
+        function updateInfo(){
+            document.getElementById('status').textContent = status;
+            document.getElementById('reason').textContent = reason;
+            document.getElementById('dateTime').textContent = dateTime;
+        }
+
+        updateInfo();
     </script>
 </body>
 </html>
