add feature: retriving data from database

--- a/public/update_form.html
+++ b/public/update_form.html
@@ -32,11 +32,11 @@
                 <legend>Reason<abbr title="required" aria-label="required" aria-required="true">*</abbr></legend>
                 <p>
                     <label for="noMoney">No money</label>
-                    <input type="radio" name="reason" value="noMoney">    
+                    <input type="radio" name="reason" value="No Money">    
                 </p>
                 <p>
                     <label for="noMoney">Maintenance</label>
-                    <input type="radio" name="reason" value="maintenance">    
+                    <input type="radio" name="reason" value="Maintenance">    
                 </p>
                 <p>
                     <label for="noMoney">Other</label>
