--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class = "container flex">
         <header>
-            <h1>KMM ATM Status</h1>
+            <h1>KMM ATM STATUS</h1>
             <h2>By Jun</h2>
         </header>
         <section class="flex-item">
