--- a/public/update_form.html
+++ b/public/update_form.html
@@ -21,11 +21,11 @@
                 <legend>Status<abbr title="required" aria-label="required" aria-required="true">*</abbr></legend>
                 <p>
                     <label for="working">Working</label>
-                    <input type="radio" name="status" value=true required>                
+                    <input type="radio" name="status" value="Working" required>                
                 </p>
                 <p>
                     <label for="notWorking">Not Working</label>
-                    <input type="radio" name="status" value=false>
+                    <input type="radio" name="status" value="Not Working">
                 </p>
             </fieldset>
             <fieldset class="flex-item">
