--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,38 @@
             </form>
         </footer>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-database.js"></script>
     
+
     <script src="indexSrc.js"></script>
+    <script>
+    const firebaseConfig = {
+    apiKey: "AIzaSyCOUrr3jGvZ_B2rkvu8FH3y8r_y9D8gNs8",
+    authDomain: "statuslist-a643b.firebaseapp.com",
+    databaseURL: "https://statuslist-a643b-default-rtdb.firebaseio.com",
+    projectId: "statuslist-a643b",
+    storageBucket: "statuslist-a643b.appspot.com",
+    messagingSenderId: "374688213277",
+    appId: "1:374688213277:web:4ab653dd3ec97a5ee459f4",
+    measurementId: "G-T5Y7H7HJLN"
+  };
+  firebase.initializeApp(firebaseConfig);
+  var db = firebase.database();
+  var usersRef = db.ref("status");
+  usersRef
+.orderByChild("submitted")
+.limitToLast(1)
+.on(
+  "value",
+  function (snapshot) {
+    var item = Object.values(snapshot.val())[0];
+    updateList(item);
+  },
+  function (err) {
+    console.log("The read failed: " + err);
+  }
+);
+    </script>
 </body>
 </html>
