--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300&family=Playfair+Display:wght@900&family=Roboto:ital,wght@0,100;0,400;1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
@@ -55,21 +56,10 @@
     </div>
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-database.js"></script>
-    
+    <script src="./init-firebase.js"></script>
 
     <script src="indexSrc.js"></script>
     <script>
-    const firebaseConfig = {
-    apiKey: "AIzaSyCOUrr3jGvZ_B2rkvu8FH3y8r_y9D8gNs8",
-    authDomain: "statuslist-a643b.firebaseapp.com",
-    databaseURL: "https://statuslist-a643b-default-rtdb.firebaseio.com",
-    projectId: "statuslist-a643b",
-    storageBucket: "statuslist-a643b.appspot.com",
-    messagingSenderId: "374688213277",
-    appId: "1:374688213277:web:4ab653dd3ec97a5ee459f4",
-    measurementId: "G-T5Y7H7HJLN"
-  };
-  firebase.initializeApp(firebaseConfig);
   var db = firebase.database();
   var usersRef = db.ref("status");
   usersRef
