--- a/public/update_form.html
+++ b/public/update_form.html
@@ -47,9 +47,12 @@
                 <label for="name" style="font-size: 1.2rem;">Last check: <abbr title="required" aria-label="required" aria-required="true">*</abbr></label>
                 <input type="datetime-local" name="submitted" class="in" id = "inputDate" required>
             </div>
-            <p id = "info" style="font-size: 0.9rem;" class="flex-item">Please be responsible with the information you will be sharing on this website. This website is intended to help the students. Thank you. :)</p> 
-            <p id = "returnForm"></p>
-            <input type="submit" value="Submit" class = "submitButton" style="font-size: 1.5rem;" id="create">      
+            <div>
+                <p id = "info" class="flex-item">Please be responsible with the information you will be sharing on this website. This website is intended to help the students. Thank you. :)</p> 
+                <p id = "returnForm"></p>
+                <input type="submit" value="Submit" class = "submitButton" style="font-size: 1.5rem;" id="create">
+            </div>
+                  
         </form>
     </div>
     <script src="formSrc.js"></script>
