--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,9 @@
         <a href="/update_form.html" rel="noopener noreferrer" target="_blank"><button type="button" class = "submitButton">Update</button></a>
         
         <div>
-            <input type="button" value="FEEDBACK" class="indexButton" display="inline-block">
+            <a href="https://forms.gle/f7HSs3RHaXo6n9sg6" rel="noopener noreferrer" target="_blank"><input type="button" value="FEEDBACK" class="indexButton" display="inline-block"></a>
         </div>
-        
+<!--        
         <footer>
             <form action="/feedback" method="post" id="feedbackForm" class="flex" style="width: 100%;">
                 <div class="flex-item" style="width: 100%;">
@@ -52,12 +52,12 @@
                 </div>
                 <input type="submit" class = "submitButton" value="Submit">
                 <p id = "returnFeedback"></p>
-            </form>
+            </form> -->
         </footer>
         <div id="social" class="flex">
             <a href="https://github.com/nwjun/atm-status" rel="noopener noreferrer" target="_blank"><img src="/png/003-github-logo.png" alt="github-icon"></a>
             <a href="https://www.instagram.com/nw_jun/" rel="noopener noreferrer" target="_blank"><img src="/png/001-instagram.png" alt="instagram-icon"></a>
-            <a href="mailto:nwjun02@gmail.com" rel="noopener noreferrer" target="_blank"><img src="/png/002-email.png" alt="email-icon"></a>
+            <a href="mailto:helloworldisagurl@gmail.com" rel="noopener noreferrer" target="_blank"><img src="/png/002-email.png" alt="email-icon"></a>
         </div>
         <div id="credit">
             <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
