--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
         <div id="social" class="flex">
             <a href="https://github.com/nwjun/atm-status" rel="noopener noreferrer" target="_blank"><img src="/png/003-github-logo.png" alt="github-icon"></a>
             <a href="https://www.instagram.com/nw_jun/" rel="noopener noreferrer" target="_blank"><img src="/png/001-instagram.png" alt="instagram-icon"></a>
-            <a href="mailto:helloworldisagurl@gmail.com" rel="noopener noreferrer" target="_blank"><img src="/png/002-email.png" alt="email-icon"></a>
+            <a href="mailto:helloworldisagurl@gmail.com"><img src="/png/002-email.png" alt="email-icon"></a>
         </div>
         <div id="credit">
             <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
